조건식수정
조건식 선택 후 리스트 중첩 없애기 작업했음. 월요일 test해보자.

--- a/VeryGoodAuto/Form1.resx
+++ b/VeryGoodAuto/Form1.resx
@@ -125,10 +125,10 @@
         AAAAAQAAAAAAAAAAAAAAABAAAAACAAEA4g4AACsFAAAAAAAACw==
 </value>
   </data>
-  <metadata name="조건_조건번호.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="조건식_조건번호.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="조건_조건명.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="조건식_조건명.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="조건종목_종목코드.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
