실시간검색완료
실시간검색완료
매수매도 0.25초 할수 있도록 수정해라.

--- a/VeryGoodAuto/Form1.resx
+++ b/VeryGoodAuto/Form1.resx
@@ -149,6 +149,9 @@
   <metadata name="조건종목_거래량.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="조건종목_거래금.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="미체결_주문번호.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
